correct z-index for heder

--- a/assets/styles/components/header.styl
+++ b/assets/styles/components/header.styl
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   height: 100px;
-  z-index: 10;
+  z-index: 20;
 }
 
 .header__wrapper {
